# VapourSynth-JincResize

./: .gitignore  .travis.yml  LICENSE  README.md  meson.build
.github/workflows/: CI.yml
JincResize/: JincResize.cpp  JincResize.sln  JincResize.vcxproj  JincResize.vcxproj.filters  meson.build
JincResize/include/: Helper.hpp  JincFunc.hpp
include/: EWAResizer.h  EWAResizer.hpp  Helper.hpp  JincFunc.hpp  Lut.hpp
msvc/: JincResize.sln  JincResize.vcxproj  JincResize.vcxproj.filters
src/: JincResize.cpp
